# chess-python

./: README.md  pyproject.toml  requirements.txt
chess/: __init__.py  __main__.py  board.py  chess_notation.py  constants.py  engine.py  event_handler.py  game.py  gui.py  move.py  piece.py  settings.py  square.py  starting_pieces.py  state.py  utils.py
chess/tests/: test_scholars_mate.py
tests/: test_scholars_mate.py
tests/smoke/: test_scholars_mate.py
