[tool.poetry]
name = "python-chess"
version = "0.1.0"
description = ""
authors = ["myke2424 <myke2424@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
